test/negative/truthy_float.mut
# Floats do not support truthiness
x: f64 = 3.14
if x
    print(1)
end
